--- a/create-vm.html
+++ b/create-vm.html
@@ -26,9 +26,6 @@
 	<link rel="stylesheet" href="assets/vendor/spinner/css/bootstrap-spinner.min.css">
 	<!--custom-->
 	<style type="text/css" rel="stylesheet">
-			#create-vm {
-				width: 1550px;
-			}
 		/*分类标题*/
 		.panel .panel-body .form-horizontal h4{
 			margin-top: 30px;
@@ -53,11 +50,15 @@
         #purchase{
             position: fixed;
             top: 108px;
-            right: 25px;
-			width: 310px;
-			z-index: 10;
+            right: 5px;
 			/*background: #FFFFFF;*/
         }
+
+		@media screen and (max-width: 996px) {
+			#purchase{
+				position: static;
+			}
+		}
 
 	</style>
 </head>
@@ -156,7 +157,7 @@
 			<div class="main-content">
 				<div class="container-fluid">
 					<div class="row">
-						<div class="col-md-10" id="create-vm">
+						<div class="col-md-9" id="create-vm">
 							<!-- TABLE HOVER -->
 							<div class="panel">
 								<div class="panel-heading">
@@ -324,7 +325,7 @@
 												<input type="checkbox"/>购买并绑定
 												<div class="alert alert-info">
 													<a href="#" class="close" data-dismiss="alert">&times;</a>
-													不购买弹性EIP，则该主机仅支持内网访问，您也可以稍后购买弹性IP并手动绑定到主机上。
+													不购买弹性IP，则该主机仅支持内网访问，您也可以稍后购买弹性IP并手动绑定到主机上。
 												</div>
 											</div>
 										</div>
@@ -382,81 +383,85 @@
 							<!-- END TABLE HOVER -->
 							</div>
 						</div>
+
+                        <!--三栏最右侧 begin-->
+                        <div class="col-md-3" id="purchase">
+                            <div class="panel panel-default">
+                                <div class="panel-body">
+                                    <form class="form-horizontal" role="form">
+                                        <div class="form-group">
+                                            <label class="col-sm-4 control-label">购买数量</label>
+                                            <div class="col-sm-8">
+                                                <!--<input class="form-control" placeholder="1"/>-->
+                                                <div class="input-group spinner" data-trigger="spinner" id="spinner">
+                                                    <input type="text" class="form-control" value="1" data-max="5" data-min="1" data-step="1">
+                                                    <div class="input-group-addon">
+                                                        <a href="javascript:;" class="spin-up" data-spin="up"><i class="fa fa-caret-up"></i></a>
+                                                        <a href="javascript:;" class="spin-down" data-spin="down"><i class="fa fa-caret-down"></i></a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="col-sm-8 control-label">云主机配额</label>
+                                            <div class="col-sm-4">
+                                                <span class="small text-right">1/5</span>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="col-sm-8 control-label">弹性IP配额</label>
+                                            <div class="col-sm-4">
+                                                <span class="small">1/5</span>
+                                            </div>
+                                        </div>
+                                        <hr/>
+                                        <div class="form-group">
+                                            <label class="control-label">付费方式</label>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="col-sm-8 col-sm-offset-4">
+                                                <select class="form-control">
+                                                    <option>月付</option>
+                                                    <option>年付</option>
+                                                    <option>按时</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="col-sm-8 col-sm-offset-4">
+                                                <select class="form-control">
+                                                    <option>购至月末</option>
+                                                    <option>1个月</option>
+                                                    <option>2个月</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <hr/>
+                                        <div class="form-group">
+                                            <label class="col-sm-5 control-label">合计费用</label>
+                                            <div class="col-sm-7">
+                                                <span class="label label-primary" style="font-size: 18px;">￥88.88</span>
+                                            </div>
+                                        </div>
+                                        <br/>
+                                        <div class="form-group">
+                                            <div class="col-sm-5">
+                                                <a class="btn btn-primary">立即购买</a>
+                                            </div>
+                                            <div class="col-sm-5">
+                                                <a class="btn btn-default">加入清单</a>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+
+
 					</div>
 					</div>
 
-					<!--三栏最右侧 begin-->
-					<div id="purchase">
-						<div class="panel panel-default">
-							<div class="panel-body">
-								<form class="form-horizontal" role="form">
-									<div class="form-group">
-										<label class="col-sm-4 control-label">购买数量</label>
-										<div class="col-sm-8">
-											<!--<input class="form-control" placeholder="1"/>-->
-											<div class="input-group spinner" data-trigger="spinner" id="spinner">
-												<input type="text" class="form-control" value="1" data-max="5" data-min="1" data-step="1">
-												<div class="input-group-addon">
-													<a href="javascript:;" class="spin-up" data-spin="up"><i class="fa fa-caret-up"></i></a>
-													<a href="javascript:;" class="spin-down" data-spin="down"><i class="fa fa-caret-down"></i></a>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="form-group">
-										<label class="col-sm-8 control-label">云主机配额</label>
-										<div class="col-sm-4">
-											<span class="small text-right">1/5</span>
-										</div>
-									</div>
-									<div class="form-group">
-										<label class="col-sm-8 control-label">弹性IP配额</label>
-										<div class="col-sm-4">
-											<span class="small">1/5</span>
-										</div>
-									</div>
-									<hr/>
-									<div class="form-group">
-										<label class="control-label">付费方式</label>
-									</div>
-                                    <div class="form-group">
-                                        <div class="col-sm-8 col-sm-offset-4">
-                                            <select class="form-control">
-                                                <option>月付</option>
-                                                <option>年付</option>
-                                                <option>按时</option>
-                                            </select>
-                                        </div>
-                                    </div>
-									<div class="form-group">
-										<div class="col-sm-8 col-sm-offset-4">
-											<select class="form-control">
-												<option>购至月末</option>
-												<option>1个月</option>
-												<option>2个月</option>
-											</select>
-										</div>
-									</div>
-									<hr/>
-									<div class="form-group">
-										<label class="col-sm-5 control-label">合计费用</label>
-										<div class="col-sm-7">
-											<span class="label label-primary" style="font-size: 18px;">￥88.88</span>
-										</div>
-									</div>
-                                    <br/>
-									<div class="form-group">
-										<div class="col-sm-5">
-                                            <a class="btn btn-primary">立即购买</a>
-										</div>
-										<div class="col-sm-5">
-                                            <a class="btn btn-default">加入清单</a>
-										</div>
-									</div>
-								</form>
-							</div>
-						</div>
-					</div>
+
 
 					<!--三栏最右侧 begin-->
 
