--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 				<nav>
 					<ul class="nav">
 						<li><a href="index.html" class="active"><i class="lnr lnr-home"></i> <span>首页</span></a></li>
-						<li><a href="tables.html" class=""><i class="lnr lnr-code"></i> <span>云主机</span></a></li>
+						<li><a href="vm-list.html" class=""><i class="lnr lnr-code"></i> <span>云主机</span></a></li>
 						<li><a href="charts.html" class=""><i class="lnr lnr-chart-bars"></i> <span>网络</span></a></li>
 						<li><a href="panels.html" class=""><i class="lnr lnr-cog"></i> <span>模板</span></a></li>
 						<li><a href="panels.html" class=""><i class="lnr lnr-cog"></i> <span>存储</span></a></li>
